--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -1,3 +1,8 @@
 .app {
-  padding: 10px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
