--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -3,6 +3,7 @@
   width: 100%;
   height: 100%;
   display: flex;
+  flex-flow: wrap-reverse;
   justify-content: center;
   align-items: center;
 }
