--- a/src/components/Counter.module.css
+++ b/src/components/Counter.module.css
@@ -1,17 +1,7 @@
 .counter {
-    min-width: 150px;
     width: 150px;
     height: 150px;
-    padding: 10px;
-
-    border: 2px solid darkcyan;
-    border-radius: 10px;
-    background-color: darkslateblue;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    place-items: center;
+    margin: 5px;
 }
 
 .buttonsPanel {
