feat: implement validation of maxValue and startValue. fix logic of marking input fields and disabling set button

--- a/src/components/Input.module.css
+++ b/src/components/Input.module.css
@@ -5,16 +5,19 @@
 .input {
     width: 50px;
 }
-.errorInput{
+
+.errorInput {
     border-color: red;
+    background-color: red;
 }
+
 .error {
     color: red;
     font-size: 12px;
     min-height: 16px;
 }
 
-.captionAndInputWrap{
+.captionAndInputWrap {
     display: flex;
     justify-content: space-between;
 }
