--- a/src/components/Monitor.module.css
+++ b/src/components/Monitor.module.css
@@ -1,28 +1,29 @@
 .monitor {
     width: 100%;
     height: 50px;
-    text-align: center;
     background-color: cyan;
     border: 2px solid darkcyan;
     border-radius: 10px;
-
-    text-shadow: #da3c69 0 0 1px;
+    /*text-shadow: #da3c69 0 0 1px;*/
+    text-align: center;
+    display: inline-block;
+    vertical-align: sub;
 }
 
 .maxValue {
     color: red;
     border-color: red;
-    font-size: 26px;
+    font-size: 32px;
 
 }
 
 .normValue {
     color: darkmagenta;
-    font-size: 26px;
+    font-size: 30px;
 }
 
 .info {
-    color: yellow;
+    color: #d700bb;
     font-size: 16px;
 }
 
